# Compliance-Services

./: .env.example  .gitignore  README.md  api_gateway.py  architecture.md  compliance_service.py  mcp-implementation-guide-summary.md  mcp_azureai_inference.py  pyproject.toml  requirements.txt  setup-guide.md  test_ai_capabilities.py  test_basic_connection.py  test_compliance.py  test_gateway.py  test_prompts.py  test_resources.py  test_tools.py
