[project]
name = "mcp-latest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "httpx>=0.27.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "mcp[cli]>=1.0.0",
    "openai>=1.92.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.9.0",
]
